updated subway and 2nd h2

--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-form.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-form.html
@@ -84,7 +84,7 @@
             <li><a href="grouping.html" class="hidden-xs hidden-sm">Group work into SR&amp;ED projects</a>
 	            <a href="grouping.html#gc-document-nav" class="visible-xs visible-sm">Group work into SR&amp;ED projects</a> 
             </li>
-            <li><a href="get-form.html" class="active" aria-current="page">Get the T661 expenditures claim form</a>
+            <li><a href="get-form.html" class="active" aria-current="page">Report expenditures with form T661</a>
             </li>
             <li><a href="calculate-1.html" class="hidden-xs hidden-sm">Calculate  allowable expenditures</a>
                 <a href="calculate-1.html#gc-document-nav" class="visible-xs visible-sm">Calculate  allowable expenditures</a> 
@@ -148,7 +148,7 @@
 	<p>To learn more about how partnerships must fill out Form T661, review <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4088/guide-form-t661-scientific-research-experimental-development-expenditures-claim-guide-form-t661.html#toc28">Partnerships, T4088 guide to SR&amp;ED Expenditures Claim</a>.</p>
 	  
 </details>    
-<h2>Get support with your claim form</h2>
+<h2>Get support with your expenditures form </h2>
 <h3>Review the guide to the SR&amp;ED expenditures claim </h3>
 <p>Get step-by-step guidance filling out Form T661 SR&amp;ED Expenditures Claim.</p>
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4088.html">T4088, SR&amp;ED Expenditures Claim - Guide to T661</a></p>
