--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-form.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-form.html
@@ -119,7 +119,7 @@
 
 <h1 property="name" id="wb-cont" class="gc-thickline">Report expenditures with form T661</h1>
 <h2>Get the T661 expenditures claim form</h2>
-<p>To report their expenditures, you must first calculate how much they spent on a SR&amp;ED project during the tax year.</p>
+<p>To report your expenditures, you must first calculate how much you spent on a SR&amp;ED project during the tax year.</p>
 
 <p>You must use the Form T661 SR&amp;ED expenditures  claim to:</p>
 <ol>
