--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-form.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-form.html
@@ -121,7 +121,7 @@
 <h2>Get the T661 expenditures claim form</h2>
 <p>To report your expenditures, you must first calculate how much you spent on a SR&amp;ED project during the tax year.</p>
 
-<p>You must use the Form T661 SR&amp;ED expenditures  claim to:</p>
+<p>Use Form T661, SR&amp;ED expenditures claim to:</p>
 <ol>
     <li>Calculate your allowable expenditures</li>
     <li>Calculate your pool of deductible expenditures</li>
@@ -129,7 +129,7 @@
 </ol>
 		 
 <ul class="fa-ul">   
-  <li><span class="far fa-file-pdf fa-lg text-muted fa-li"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t661.html">Form  T661, Scientific Research and Experimental Development (SR&amp;ED) Expenditures Claim</a></li>
+  <li><span class="far fa-file-pdf fa-lg text-muted fa-li"></span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t661.html">Form T661, Scientific Research and Experimental Development (SR&amp;ED) Expenditures Claim</a></li>
 </ul>    
              
  
