--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -752,17 +752,17 @@
 <p>Give your employee proof of the amounts of <abbr title="registered pension plan">RPP</abbr> contributions for all tax-exempt income.</p>
 </dd>
 
-<dt><abbr title="Registered retirement savings plan">RRSP</abbr> contributions</dt>
-<dd><p><strong>Do not</strong> report contributions you made to your employee's <abbr title="Registered retirement savings plan">RRSP</abbr> using box 20, use <a href="#cd_40">code 40</a> to report the total value of the benefit.</p>
+<dt><abbr title="Registered retirement savings plan">RRSP</abbr> </dt>
+<dd><p><strong>Do not</strong> report an amount if you made contributions to your employee's <abbr title="Registered retirement savings plan">RRSP</abbr> using box 20, use <a href="#cd_40">code 40</a> to report the total value of the benefit.</p>
 </dd>
 
-<dt><abbr title="Retirement compensation arrangement">RCA</abbr> contributions</dt>
-<dd><p>Report an amount if you deducted <abbr title="Retirement compensation arrangement">RCA</abbr> from your employee's income. </p>
+<dt><abbr title="Retirement compensation arrangement">RCA</abbr> </dt>
+<dd><p>Report the amount if the employee contributed to a <abbr title="Retirement compensation arrangement">RCA</abbr> using box 20.  </p>
 <p>You <strong>have</strong> to attach a letter informing the employee of the amounts you reported if the amount in box 20 includes <abbr title="registered pension plan">RPP</abbr> and <abbr title="Retirement compensation arrangement">RCA</abbr> contributions.</p>
 </dd>
 
-<dt><abbr title="Registered pension plan">RPP</abbr> contributions (past services)</dt>
-<dd><p>Report the contributions the employee made to buy past services for: </p>
+<dt><abbr title="Registered pension plan">RPP</abbr> </dt>
+<dd><p>Report the amount if your employee contributed to buy <strong>past services</strong> for: </p>
 <ul>
             <li>1989 or earlier years while a contributor, using box 20 <strong>and</strong> <a href="#cd_74">code 74</a></li>
             <li>1989 or earlier years while <strong>not</strong> a contributor, using box 20 <strong>and</strong> <a href="#cd_75">code 75</a></li>
