--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-form.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-form.html
@@ -150,7 +150,7 @@
 </details>    
 <h2>Get support with your expenditures form </h2>
 <h3>Review the guide to the SR&amp;ED expenditures claim </h3>
-<p>Get step-by-step guidance filling out the T661 SR&amp;ED Expenditures Claim form.</p>
+<p>Get step-by-step guidance filling out Form T661, SR&amp;ED Expenditures Claim.</p>
 <p><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/t4088.html">T4088, SR&amp;ED Expenditures Claim - Guide to T661</a></p>
 	
 	 
