--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -735,8 +735,8 @@
 </li>
 
 
-<li class="code-num">  <details><summary >Box 20 – RPP contributions</summary>
-<p id="bx_20">Report the total amount the employee contributed to a registered pension plan (<abbr title="registered pension plan">RPP</abbr>). Include instalment interest (for example, interest charged to buy back pensionable service). </p>
+<li class="code-num">  <details><summary >Box 20 – RPP contributions <span class="label label-info">Jeremiah</span></summary>
+<p id="bx_20">Report the amount you deducted, including instalment interest (for example: interest charged to buy back pensionable service), for your employee's contributions to a registered pension plan (<abbr title="registered pension plan">RPP</abbr>). </p>
 
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
