--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-form.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-form.html
@@ -121,7 +121,7 @@
 <h2>Get the T661 expenditures claim form</h2>
 <p>To report your expenditures, you must first calculate how much you spent on a SR&amp;ED project during the tax year.</p>
 
-<p>Use Form T661, SR&amp;ED expenditures claim to:</p>
+<p>Use Form T661, SR&amp;ED Expenditures Claim to:</p>
 <ol>
     <li>Calculate your allowable expenditures</li>
     <li>Calculate your pool of deductible expenditures</li>
