--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -781,9 +781,16 @@
             <summary id="bx_22">Box 22&nbsp;– Income tax deducted</summary>
 <p>Report the amount of income tax you deducted from the employee during the year. This includes the federal, provincial (except Quebec), and territorial taxes that apply. </p>
 
-            <p><strong>Do not </strong>report any amount in box 22 if you did not deduct tax.</p>
-            <p><strong>Do not </strong>include any amount you withheld under the authority of a garnishee or a requirement to pay that applies to the employee's previously assessed tax arrears.</p>
+ <h4>Specific situations</h4>
+<dl class="dl-horizontal">
 
+<dt>No deductions</dt>
+<dd> <p><strong>Do not </strong>report any amount using box 22 if you <strong>did not</strong> deduct income tax.</p></dd>
+
+<dt>Authority of a garnishee or a requirement to pay</dt>
+<dd> <p><strong>Do not </strong>report any amount using box 22 if you withheld under the authority of a garnishee or a requirement to pay that applies to the employee's previously assessed tax arrears.</p></dd>
+</dl>
+    
 <p>Learn more: <a href="/cra-arc/payroll/calculate/when/learnit.html">About the deduction of income tax</a>
             </details>
 </li>
