--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -778,8 +778,8 @@
 
 <li class="code-num">
 	<details>
-            <summary id="bx_22">Box 22&nbsp;– Income tax deducted</summary>
-<p>Report the amount of income tax you deducted from the employee during the year. This includes the federal, provincial (except Quebec), and territorial taxes that apply. </p>
+            <summary id="bx_22">Box 22 – Income tax deducted <span class="label label-info">Jeremiah</span></summary>
+<p>Report the amount of income tax you deducted deducted from your employee during the year. This includes the federal, provincial (except Quebec), and territorial taxes that apply. </p>
 
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
