--- a/subway/uht/file-return.html
+++ b/subway/uht/file-return.html
@@ -813,7 +813,7 @@ html:lang(fr) .cnjnctn-or:before {
                   </ul>
 </div>		
 		</li>	  
-                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or hidden", "live": true},{"action": "addClass", "source": "#mail-centre", "class": "cnjnctn-sm", "live": true}]'><a href="#winnipeg_tc">Denmark</a></li>
+                    <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or hidden", "live": true}]'><a href="#winnipeg_tc">Denmark</a></li>
                     <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or hidden", "live": true}]'><a href="#winnipeg_tc">France</a></li>
                     <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or hidden", "live": true}]'><a href="#winnipeg_tc">Netherlands</a></li>
                     <li data-wb-fieldflow='[{"action": "addClass", "source": "#sudbury_tc", "class": "hidden", "live": true}, {"action": "removeClass", "source": "#mail-centre", "class": "cnjnctn-type-or hidden", "live": true}]'><a href="#winnipeg_tc">United Kingdom</a></li>
