--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -736,7 +736,7 @@
 
 
 <li class="code-num">  <details><summary >Box 20 – RPP contributions <span class="label label-info">Jeremiah</span></summary>
-<p id="bx_20">Report the amount you deducted, including instalment interest (for example: interest charged to buy back pensionable service), for your employee's contributions to a registered pension plan (<abbr title="registered pension plan">RPP</abbr>). </p>
+<p id="bx_20">Report the amount you deducted, including instalment interest (for example: interest charged to buy back pensionable service), for your employee's contributions to a registered pension plan (<abbr title="registered pension plan">RPP</abbr>) using box 20. </p>
 
  <h4>Specific situation</h4>
 <dl class="dl-horizontal">
@@ -779,7 +779,7 @@
 <li class="code-num">
 	<details>
             <summary id="bx_22">Box 22 – Income tax deducted <span class="label label-info">Jeremiah</span></summary>
-<p>Report the amount of income tax you deducted deducted from your employee during the year. This includes the federal, provincial (except Quebec), and territorial taxes that apply. </p>
+<p>Report the amount of income tax you deducted deducted from your employee using box 22. This includes the federal, provincial (except Quebec), and territorial taxes that apply. </p>
 
  <h4>Specific situations</h4>
 <dl class="dl-horizontal">
@@ -1067,30 +1067,23 @@
             </details>
 		 </li>
 
-<li class="code-num"><details> <summary>Box 44&nbsp;– Union dues</summary>
-            <p id="bx_44">Use box 44 only if you and the union agree that the union will <strong>not </strong>issue receipts for union dues to employees. Keep the certificate of agreement on file.</p>
-            <p>Report the amount you deducted from your employee for union dues. Include amounts you paid to a parity or advisory committee that qualify for a deduction. </p>
-            <p>Do <strong>not </strong>report:</p>
-            <ul>
-            <li>Initiation fees </li>
-            <li><strong>Strike pay </strong>that the union paid to union members </li>
-            </ul>
-            <p>Learn more: <a href="/en/revenue-agency/services/forms-publications/publications/it103r.html">Interpretation Bulletin IT-103R, Dues paid to a union or to a parity or advisory committee</a></p>
-           
+<li class="code-num"><details> <summary>Box 44 – Union dues <span class="label label-info">Jeremiah</span></summary>
+            <p id="bx_44"></p>
+            <p>Report the amount you deducted from your employee for union dues, including amounts you paid to a parity or advisory committee that qualify for a deduction using box 44. </p>
+                     
 <h4>Specific situations</h4>
 <dl class="dl-horizontal">
-
+<dt>Union issuing receipts</dt>
+<dd><p><strong>Do not</strong> report using box 44 if you and the union disagree that the union will </strong>not</strong> issue receipts. The union have to issue receipts (not a prescribed CRA form) to report the deductions. </p></dd>
+<dt>Initiation fees </dt>
+<dd><p><strong>Do not</strong> report using box 44 initiation fees </p></dd>
+<dt>Strike pay</dt>
+<dd><p><strong>Do not</strong> report using box 44 <strong>strike pay</strong> the union paid to union members </p></dd>
 <dt>Indian (exempt income) <span class="wb-inv">Keywords: Indians indigenous first nations</span></dt>
 <dd><p><strong>Do not</strong> report an amount for union dues relating to tax-exempt income you paid to an employee who is registered, or entitled to be registered under the Indian Act using box 44.</p>
 <p>If you pay taxable or partly tax-exempt employment income, you must prorate the amount for union dues and report this amount using code box 44.</p>
 <p>Give your employee proof of the amounts of union dues for all tax-exempt income.</p>
 </dd>
-
-<dt>Add title</dt>
-<dd>Add situation</dd>
-
-<dt>Add title</dt>
-<dd>Add situation</dd>
 </dl>
             </details>
 	       </li>
