--- a/subway/uht/pay-tax.html
+++ b/subway/uht/pay-tax.html
@@ -805,7 +805,7 @@ margin-left: 38px;
 			<p>Individuals and corporations <strong>must</strong> pay all amounts owing in <strong>Canadian dollars</strong> using any of the following methods:</p>
 
 		 
-			</p><ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
+			</p><ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
   <li class="cnjnctn-col-60">
     <p>Pay online</p>
   </li>
