migrated content over

--- a/guides/alberta/1.html
+++ b/guides/alberta/1.html
@@ -20,7 +20,7 @@
          }));
       </script>
 	  <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css"/>
-	  <link href="../css/custom.css" rel="stylesheet">
+	  <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
    </head>
    <body vocab="http://schema.org/" typeof="WebPage">
       <div id="def-top">
@@ -63,6 +63,24 @@
 <div aria-hidden="true">
 	<p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">Alberta personal income tax</p>
 	<h1 class="gc-thickline mrgn-tp-0">What's new</h1>
+	<h2><mark>New rates</mark></h2>
+	<p>The personal income levels and most provincial <span class="nowrap">non-refundable</span> tax credit amounts have changed.</p>
+<p>Contributions to nomination contestants made after <span class="nowrap">March&nbsp;30, 2022</span> will no longer qualify for the political contributions tax credit.</p>
+<p>The following tax rates are used in the calculation of your Alberta tax on taxable income:</p>
+<ul class="fa-ul">
+<li><span class="nowrap">10% on</span> the portion of your taxable income that <span class="nowrap">is $134,238</span>&nbsp;or less, <strong>plus</strong></li>
+<li><span class="fas fa-plus text-muted fa-li"></span> <span class="nowrap">12% on</span> the portion of your taxable income that is more <span class="nowrap">than $134,238</span>&nbsp;but not more <span class="nowrap">than $161,086</span>, <strong>plus</strong></li>
+<li><span class="fas fa-plus text-muted fa-li"></span><span class="nowrap">13% on</span> the portion of your taxable income that is more <span class="nowrap">than $161,086</span>&nbsp;but not more than <span class="nowrap">$214,781</span>,<strong> plus</strong></li>
+<li><span class="fas fa-plus text-muted fa-li"></span><span class="nowrap">14% on</span> the portion of your taxable income that is more <span class="nowrap">than $214,781</span>&nbsp;but not more <span class="nowrap">than $322,171</span>, <strong>plus</strong></li>
+<li><span class="fas fa-plus text-muted fa-li"></span><span class="nowrap">15% on</span> the portion of your taxable income that is more <span class="nowrap">than $322,171</span></li>
+<li class="brdr-tp"><mark><span class="fas fa-equals text-muted fa-li"></span>Alberta tax on taxable income</span></mark></li>
+
+</ul>
+    <h2 id="Alb-ben"><a id="Alberta_climate"></a>Alberta benefits for individuals and families&nbsp;</h2>
+<h3><a id="ACFB"></a>Alberta child and family benefit</h3>
+<p>This benefit is a <span class="nowrap">non-taxable</span> amount paid to <span class="nowrap">lower-</span> and <span class="nowrap">middle-income</span> families with children under&nbsp;<span class="nowrap">18&nbsp;years</span> of age. This&nbsp;program is fully funded by the Province of Alberta. The annual amount is split into four payments and is paid separately from the <a href="/en/revenue-agency/services/forms-publications/publications/t4114/canada-child-benefit.html#cctb">Canada&nbsp;child benefit</a>.</p>
+<p>You do not need to apply for the Alberta child and family benefit. The Canada Revenue <span class="nowrap">Agency (CRA)</span> will use the information from your <a href="/en/revenue-agency/services/forms-publications/forms/rc66.html">Form RC66, Canada Child Benefits Application</a>&nbsp;to determine if you are entitled to receive this benefit.</p>
+
 	</div>
 
          <div id="def-preFooter"></div>
