--- a/guides/alberta/4.html
+++ b/guides/alberta/4.html
@@ -20,7 +20,7 @@
          }));
       </script>
 	  <link rel="stylesheet" href="https://www.canada.ca/etc/designs/canada/wet-boew/css/theme.min.css"/>
-	  <link href="../css/custom.css" rel="stylesheet">
+	  <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
    </head>
    <body vocab="http://schema.org/" typeof="WebPage">
       <div id="def-top">
@@ -64,6 +64,8 @@
 	<p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">Alberta personal income tax</p>
 	<h1 class="gc-thickline mrgn-tp-0">Send CRA the tax return</h1>
 	</div>
+<p>To make sure you get your payments on time, you (and your spouse or common-law partner) need to file your <a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5015-r.html"><span class="nowrap">2022 Income</span> Tax and Benefit Return</a>(s) <span class="nowrap">by April 30, 2023.</span> The <abbr title="Canada Revenue Agency">CRA</abbr> will use the information from your return(s) to calculate the payments you are entitled to get from this program.</p>
+<p>For more information about the Alberta child and family benefit, go to&nbsp;<a href="/en/revenue-agency/services/child-family-benefits/provincial-territorial-programs/province-alberta.html">Province of Alberta</a> or <span class="nowrap">call&nbsp;<strong>1-800-959-2809</strong></span>.</p>
 
          <div id="def-preFooter"></div>
          <!-- Write closure template -->
