--- a/guides/alberta/index.html
+++ b/guides/alberta/index.html
@@ -69,14 +69,16 @@
                <div class="container p-0 p-sm-3">
                   <div class="well header-rwd brdr-0 brdr-rds-0  mrgn-tp-lg">
                      <h1 property="name" id="wb-cont" class="gc-thickline">Alberta: Personal income tax</h1>
-                     <p class="mrgn-tp-md">Alberta's personal income tax is collected by the Canada Revenue Agency (CRA).  The Alberta tax information is submitted along with your federal tax return. </p>
+                     <p class="mrgn-tp-md"><mark>Alberta's personal income tax is collected by the Canada Revenue Agency (CRA).  The Alberta tax information is submitted along with your federal tax return.</mark></p>
                   </div>
                </div>
             </div>
             <div class="container">
+			
               <div class="row">
 			  <div class="col-md-8">
-			  <h2>Steps for your 2022 tax return</h2>
+			  <p>To make sure you get your payments on time, you (and your spouse or common-law partner) need to file your <a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5015-r.html"><span class="nowrap">2022 Income</span> Tax and Benefit Return</a>(s) <span class="nowrap">by April 30, 2023.</span> The <abbr title="Canada Revenue Agency">CRA</abbr> will use the information from your return(s) to calculate the payments you are entitled to get from this program.</p>
+			  <h2>Steps for 2022</h2>
 			  <ol class="lst-stps  stps-strpd">
 			  <li><h3><a href="1.html">Find out what's new</a></h3>
 			  <p>(short description)</p>
