--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -763,7 +763,7 @@ html:lang(fr) .cnjnctn-or:before {
   <section class="gc-nav-section experimental provisional">
     <h1 property="name" id="wb-cont">Who must file a return and pay the tax</h1>
     <p>You must file an Underused Housing Tax return for <strong>each</strong> of your properties in Canada if <strong>all of the following</strong> conditions are met on <span class="nowrap">December 31</span>:</p>
-    <ul class="list-unstyled cnjnctn-type-and cnjnctn-xs">
+    <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
       <li class="cnjnctn-col">
         <p>The property is a <strong>residential property</strong></p>
       </li>
