--- a/guides/alberta/3.html
+++ b/guides/alberta/3.html
@@ -63,9 +63,8 @@
             <p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">Alberta personal income tax</p>
             <h1 class="gc-thickline mrgn-tp-0">Complete the forms</h1>
          </div>
-         <div class="wb-filters">
-		 	<section id="survey-a">
-         <h3>Part A – Alberta tax on taxable income</h3>
+        <ol class="lst-stps ld-zr">
+		<li><h3><mark>Fill out</mark>Part A – Alberta tax on taxable income</h3>
 		 <ol>
 		 <li><mark>Enter your taxable income from line 26000 of your federal tax return.</mark></li>
 		 <li><mark>Determine your taxable income by using the tax rate</mark>
@@ -83,9 +82,9 @@
 		 </details></li>
 		 
 		 </ol>
-		  </section>
-		 <section id="survey-b">
-         <h3>Part B  – Alberta non-refundable tax credits</h3>
+		 </li>
+		 <li><h3><mark>Fill out</mark>
+        Part B  – Alberta non-refundable tax credits</h3>
          <p>The eligibility conditions and rules for claiming most Alberta <span class="nowrap">non-refundable</span> tax credits are the same as those for the federal <span class="nowrap">non-refundable</span> tax credits. However, the amount and calculation of most Alberta <span class="nowrap">non-refundable</span> tax credits are different from the corresponding federal credits.</p>
          <details><summary><mark>If you are a newcomer to Canada and emigrant</mark></summary>
 		
@@ -311,9 +310,9 @@
          <p>The medical expenses you can claim on <span class="nowrap">line 58729</span> are the same as those you can claim on <span class="nowrap"><a href="/en/revenue-agency/services/tax/individuals/topics/about-your-tax-return/tax-return/completing-a-tax-return/deductions-credits-expenses/lines-33099-33199-eligible-medical-expenses-you-claim-on-your-tax-return.html">line 33199</a></span> of your <span class="nowrap"><span class="nowrap">return</span></span>. They also have to cover the same <span class="nowrap">12-month period</span> ending <span class="nowrap">in 2022</span> and must be expenses that were not claimed <span class="nowrap">for 2021.</span></p>
          </details></li>
 		 </ul>
-		 </section>
-		 <section id="survey-c">
-         <h3>Part C – Alberta tax</h3>
+		 </li>
+		<li><h3><mark>Fill out</mark>
+       Part C – Alberta tax</h3>
 		 <ul class="list-unstyled">
          <li><details><summary>Line 53 – Alberta tax on split income</summary>
          <p>If you are reporting federal tax on split income on <span class="nowrap"><a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-g/income-tax-benefit-guide-federal-non-refundable-tax-credits.html#Line424">line 40424</a></span> of your return,<span class="nowrap"> complete</span> <span class="nowrap">Part 3</span> of <a href="/en/revenue-agency/services/forms-publications/forms/t1206.html"><span class="nowrap">Form T1206</span>, Tax on Split Income</a>, to calculate the Alberta tax to enter on <span class="nowrap"><a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/5000-g/income-tax-benefit-guide-federal-non-refundable-tax-credits.html#Line42800">line 42800</a></span> of your return.</p>
@@ -358,9 +357,8 @@
          <p>If you are filing a paper return, attach the official receipt signed by an official of the registered party, the registered constituency association, or the registered candidate for each contribution.</p>
          </details></li>
 		 </ul>
-		 </section>
-		 <section id="survey-d">
-         <h3>Part D – Alberta credits</h3>
+		</li>
+		<li><h3><mark>Fill out</mark> Part D – Alberta credits</h3>
 		 <ul class="list-unstyled">
          <li><details><summary>Line 67 – Unused Alberta investor tax credit</summary>
          <p>You can claim your unused Alberta investor tax credit amounts from investments made <span class="nowrap">in 2019</span> or earlier in the following four tax years, up to a maximum <span class="nowrap">of $60,000</span> per tax year.</p>
@@ -375,9 +373,8 @@
          <p>If you are filing a paper return, attach your <span class="nowrap">Form&nbsp;T89</span>.</p>
          </details></li>
 		 </ul>
-		  </section>
-		 
-         </div>
+		  </li>
+		  </ol>
          <div id="def-preFooter"></div>
          <!-- Write closure template -->
          <script type="text/javascript">
