examples of appraisers

--- a/subway/uht/complete-return.html
+++ b/subway/uht/complete-return.html
@@ -1021,7 +1021,7 @@ margin-left: 38px;
 	     
 
 <details>
-	<summary>Acceptable Professional Associations and Designations</summary>
+	<summary>Examples of approved appraisers</summary>
 	<ul>
 		<li>Appraisal Institue of Canada (AIC)</li>
 		<ul><li>Accredited Appraiser Canadian Institute (AACI)</li></ul>
