--- a/guides/alberta/2.html
+++ b/guides/alberta/2.html
@@ -64,37 +64,29 @@
 	<p class="lead mrgn-tp-md mrgn-bttm-0 text-muted">Alberta personal income tax</p>
 	<h1 class="gc-thickline mrgn-tp-0">Get the necessary forms</h1>
 	</div>
+	<h2>Options</h2>
 	<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
   <li class="cnjnctn-col">
-    <h4 class="mrgn-tp-sm text-muted">Online<span class="wb-inv">: Option 1</span></h4>
-    <p>This is content for column A </p>
+    <h4 class="mrgn-tp-sm text-muted"><mark>Using certified software<span class="wb-inv">: Option 1</span></mark></h4>
+    <p><mark>The necessary forms are automatically generated for you if you use <a href="https://www.canada.ca/en/revenue-agency/services/e-services/digital-services-individuals/netfile-overview/certified-software-netfile-program.html">certified tax software</a>. </mark></p>
   </li>
   <li class="cnjnctn-col">
-    <h4 class="mrgn-tp-sm text-muted">My mail<span class="wb-inv">: Option 2</span></h4>
+    <h4 class="mrgn-tp-sm text-muted"><mark>Using paper forms<span class="wb-inv">: Option 2</span></mark></h4>
     <p>You can download and print a copy of <a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-c.html"><span class="nowrap">Form AB428</span>, Alberta Tax and Credits</a> to calculate your Alberta tax and credits. Attach a completed copy of <span class="nowrap">Form AB428</span> to your return.</p>
   </li>
   <li class="cnjnctn-col">
-    <h4 class="mrgn-tp-sm text-muted">Other options<span class="wb-inv">: Option 3</span></h4>
-    <p>Refer to: <a href="https://www.canada.ca/en/services/taxes/income-tax/personal-income-tax/get-ready-taxes/ways.html">Ways to do your taxes</a></li>
+    <h4 class="mrgn-tp-sm text-muted"><mark>Other options<span class="wb-inv">: Option 3</span></mark></h4>
+    <p><mark>Refer to: <a href="https://www.canada.ca/en/services/taxes/income-tax/personal-income-tax/get-ready-taxes/ways.html">Ways to do your taxes</a></mark></li>
                 </li>          
                         </ul>
 
-<h3><a id="Definitions"></a>Definitions</h3>
-<p><strong>Spouse</strong> refers to a person you are legally married to.&nbsp;</p>
-<p><strong>Common-law partner </strong>refers to a person who is not your spouse, but with whom you are in a conjugal relationship and <strong>at least one</strong> of the following <span class="nowrap">conditions applies</span>:</p>
-<ul>
-<li>This person has been living with you in a conjugal relationship for at least <span class="nowrap">12 continuous</span> months (including any period of time where you were separated for less than <span class="nowrap">90 days</span> because of a breakdown in the relationship)</li>
-<li>This person is the parent of your child by birth or adoption</li>
-<li>This person has custody and control of your child (or had custody and control immediately before the child turned <span class="nowrap">19 years</span> of age) and your child is wholly dependent on them for support</li>
-</ul>
-<p><strong>End of the year </strong>means<strong> any </strong>of the following dates:</p>
-<ul>
-<li><span class="nowrap">December 31</span>, 2022</li>
-<li>the date you left Canada if you emigrated <span class="nowrap">in 2022</span></li>
-<li>the date of death for a person who died<span class="nowrap"> in 2022</span></li>
-</ul>
-
-        <h2 id="b428"><span class="nowrap">Form AB428</span>, Alberta Tax and Credits</h2>
+<h2><mark>Determine which form to use</mark></h2>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-xs">
+  <li class="cnjnctn-col">
+    <h4 class="mrgn-tp-sm text-muted"><span class="nowrap">Form AB428</span>, Alberta Tax and Credits<span class="wb-inv">: Option 1</span></h4>
+  
+ 
+        <h2 id="b428"></h2>
 <p>Complete <span class="nowrap"><a href="/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/alberta/5009-c.html">Form&nbsp;AB428</a></span> if <strong>one</strong> of the following applies:</p>
 <ul>
 <li>You were a resident of Alberta at the end of the year</li>
@@ -104,7 +96,12 @@
 </ul>
 </li>
 </ul>
-<h3><a id="MJ"></a>When to complete Form T2203, Provincial and Territorial Taxes for Multiple Jurisdictions</h3>
+ </li>
+  <li class="cnjnctn-col">
+    <h4 class="mrgn-tp-sm text-muted">Form T2203, Provincial and Territorial Taxes for Multiple Jurisdictions<span class="wb-inv">: Option 2</span></h4>
+    
+  
+
 <p>Complete <span class="nowrap"><a href="/en/revenue-agency/services/forms-publications/forms/t2203.html">Form T2203, Provincial and Territorial Taxes for Multiple Jurisdictions</a>,&nbsp;</span><strong>instead</strong> of <span class="nowrap">Form AB428,</span> if<strong> both</strong> of the following apply:<strong></strong></p>
 <ul>
 <li>You resided in Alberta on <span class="nowrap">December 31, 2022</span> (or the date you left Canada if you emigrated <span class="nowrap">in 2022)</span></li>
@@ -115,8 +112,28 @@
 <li>You were a non-resident of Canada throughout 2022</li>
 <li>You were carrying on business in <strong>more than one</strong> province or territory in Canada or were receiving income from an office or employment that can reasonably be attributed to duties performed in <strong>more than one</strong> province or territory in Canada</li>
 </ul>
+</li>
+</ul>
+    <h3>Defintions</h3>
 
-    
+<details><summary>Spouse</summary> refers to a person you are legally married to.&nbsp;</p>
+</details>
+<details><summary>
+Common-law partner </summary>refers to a person who is not your spouse, but with whom you are in a conjugal relationship and <strong>at least one</strong> of the following <span class="nowrap">conditions applies</span>:</p>
+<ul>
+<li>This person has been living with you in a conjugal relationship for at least <span class="nowrap">12 continuous</span> months (including any period of time where you were separated for less than <span class="nowrap">90 days</span> because of a breakdown in the relationship)</li>
+<li>This person is the parent of your child by birth or adoption</li>
+<li>This person has custody and control of your child (or had custody and control immediately before the child turned <span class="nowrap">19 years</span> of age) and your child is wholly dependent on them for support</li>
+</ul>
+
+</details>
+<details><summary>End of the year </summary>means<strong> any </strong>of the following dates:</p>
+<ul>
+<li><span class="nowrap">December 31</span>, 2022</li>
+<li>the date you left Canada if you emigrated <span class="nowrap">in 2022</span></li>
+<li>the date of death for a person who died<span class="nowrap"> in 2022</span></li>
+</ul>
+</details>
 
 
          <div id="def-preFooter"></div>
